--- a/backend/api/variant/models/variant.settings.json
+++ b/backend/api/variant/models/variant.settings.json
@@ -11,15 +11,18 @@
     "draftAndPublish": true
   },
   "attributes": {
-    "Name": {
+    "name": {
       "type": "string"
     },
-    "Packaging": {
+    "packaging": {
       "type": "string"
     },
-    "product": {
+    "products": {
       "via": "variants",
-      "model": "product"
+      "collection": "product"
+    },
+    "price": {
+      "type": "biginteger"
     }
   }
 }
