--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,20 +9,19 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
-    "@react-three/drei": "^3.11.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
-    "gsap": "^3.6.1",
     "next": "10.1.3",
     "next-seo": "^4.20.0",
     "pure-react-carousel": "^1.27.6",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.0.0",
-    "react-three-fiber": "^5.3.19",
     "react-use-cart": "^1.11.1",
     "swr": "^0.5.5",
-    "three": "^0.126.1"
+    "gsap": "^3.6.1",
+    "@react-spring/core": "^9.0.0-rc.3",
+    "@react-spring/web": "^9.0.0-rc.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
