update cart logic, checkout,cart layout

--- a/backend/api/order-item/models/order-item.settings.json
+++ b/backend/api/order-item/models/order-item.settings.json
@@ -21,8 +21,8 @@
       "model": "product"
     },
     "order": {
-      "model": "order",
-      "via": "order_items"
+      "via": "order_items",
+      "model": "order"
     },
     "variant": {
       "model": "variant"
