--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,19 +9,21 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@react-spring/core": "^9.0.0-rc.3",
+    "@react-spring/web": "^9.0.0-rc.3",
+    "axios": "^0.21.1",
     "graphql": "^15.5.0",
     "graphql-request": "^3.4.0",
+    "gsap": "^3.6.1",
     "next": "10.1.3",
     "next-seo": "^4.20.0",
     "pure-react-carousel": "^1.27.6",
     "react": "17.0.2",
+    "react-cookie": "^4.0.3",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.0.0",
     "react-use-cart": "^1.11.1",
-    "swr": "^0.5.5",
-    "gsap": "^3.6.1",
-    "@react-spring/core": "^9.0.0-rc.3",
-    "@react-spring/web": "^9.0.0-rc.3"
+    "swr": "^0.5.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
