--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@hookform/resolvers": "^2.4.0",
     "@material-ui/core": "^4.11.3",
     "@react-spring/core": "^9.0.0-rc.3",
     "@react-spring/web": "^9.0.0-rc.3",
@@ -21,9 +22,11 @@
     "react": "17.0.2",
     "react-cookie": "^4.0.3",
     "react-dom": "17.0.2",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.0.0",
     "react-use-cart": "^1.11.1",
-    "swr": "^0.5.5"
+    "swr": "^0.5.5",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "autoprefixer": "^10.2.5",
