update strapi analytics and user tracking on front

--- a/backend/plugins/commerce/models/Tracker.settings.json
+++ b/backend/plugins/commerce/models/Tracker.settings.json
@@ -17,6 +17,10 @@
     "date": {
       "default": "",
       "type": "date"
+    },
+    "bounce": {
+      "default": true,
+      "type": "boolean"
     }
   }
 }
